Regression: Accelerated framebuffer sharing fails to initialize in 46.alpha
Starting in cc7bca07, I get these errors on startup:
libmutter-Message: 17:59:58.929: Running Mutter (using mutter 45.0) as a Wayland display server
libmutter-Message: 17:59:58.946: Made thread 'KMS thread' realtime scheduled
libmutter-Message: 17:59:58.981: Device '/dev/dri/card1' prefers shadow buffer
libmutter-Message: 17:59:59.076: Added device '/dev/dri/card1' (nvidia-drm) using atomic mode setting.
libmutter-Message: 17:59:59.097: Device '/dev/dri/card0' prefers shadow buffer
libmutter-Message: 17:59:59.134: Added device '/dev/dri/card0' (i915) using atomic mode setting.
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
libmutter-Message: 17:59:59.135: Failed to initialize accelerated iGPU/dGPU framebuffer sharing: KMS CRTC doesn't support GBM format
libmutter-Message: 17:59:59.135: Created gbm renderer for '/dev/dri/card1'
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
(mutter:99728): libmutter-CRITICAL **: 17:59:59.135: meta_crtc_kms_supports_format: assertion 'crtc_kms->assigned_primary_plane' failed
libmutter-Message: 17:59:59.135: Failed to initialize accelerated iGPU/dGPU framebuffer sharing: KMS CRTC doesn't support GBM format
This also seems to be the reason why !3304 (merged) doesn't work with mutter 46.alpha.